--- a/wiki/mentoring.mdx
+++ b/wiki/mentoring.mdx
@@ -1,13 +1,14 @@
-<Head>
-  <title>Nat Welch | Mentoring</title>
-</Head>
+---
+title: Mentoring
+---
 
-<TextHeader level="1">Mentoring</TextHeader>
-<TextHeader level="2">What</TextHeader>
+# Mentoring
+
+## What
 
 I would like to be your colleague, friend and / or acquaintance. Why?  Because, my career has been particularly weird, and talking to others has helped me be somewhat successful in surviving some transitions.I have jumped to and from startups, big business, politics, writing, and many other situations.I failed out of college briefly, and have lived in ~five cities.If you think this experience would be useful to you, I would love to chat.
 
-<TextHeader level="2">How To</TextHeader >
+## How To
 
 There are a few options to get in touch!
 
