--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -33,6 +33,7 @@ I expand on these in depth on my blog: [Nat Welch Manifesto](https://writing.nat
 
 ## Social
 
+<Social className="" linkClassName="mv3 mr3 gray" />
 
 ## Nat around the world
 
