--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -30,7 +30,7 @@ I expand on these in depth on my blog: [Nat Welch Manifesto](https://writing.nat
 
 ## Social
 
-<Social className="" linkClassName="mv3 mr3 gray" />
+<div style={{margin: "1em 0em"}}><Social /></div>
 
 ## Nat around the world
 
