--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -19,12 +19,13 @@ side projects.
 
 I have some core beliefs that are the basis for most things that I do.
 
--   Sharing information is the most important action in human society.
--   I love automating things and building software tools to make
-    maintaining the internet easier.
--   Nature is beautiful and must be preserved.
--   Humans are inherently good and hilarious, and communicating with
-    them well is important.
+>   Sharing information is the most important action in human society.
+
+>   I love automating things and building software tools to make maintaining the internet easier.
+
+>   Nature is beautiful and must be preserved.
+
+>   Humans are inherently good and hilarious, and communicating with them well is important.
 
 I expand on these in depth on my blog: [Nat Welch Manifesto](https://writing.natwelch.com/post/703)
 
@@ -43,8 +44,7 @@ friends traveling.
 -   [London](https://writing.natwelch.com/post/526)
 -   [SF](https://writing.natwelch.com/post/522)
 -   [Seattle](https://foursquare.com/icco/list/places-i-love-in-seattle)
--   [San Luis
-    Obispo](https://foursquare.com/icco/list/my-favorite-foods-in-slo)
+-   [San Luis Obispo](https://foursquare.com/icco/list/my-favorite-foods-in-slo)
 
 ## Speaker Bio
 
