--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -27,7 +27,7 @@ I have some core beliefs that are the basis for most things that I do.
 
 >   Humans are inherently good and hilarious, and communicating with them well is important.
 
-I expand on these in depth on my blog: [Nat Welch Manifesto](https://writing.natwelch.com/post/703)
+You can read a more indepth writeup of these beliefs on my blog: [Nat Welch Manifesto](https://writing.natwelch.com/post/703)
 
 ## Social
 
