--- a/wiki/projects/graphql.mdx
+++ b/wiki/projects/graphql.mdx
@@ -1,1 +1,9 @@
-# graphql
+---
+title: GraphQL
+---
+
+# GraphQL
+
+GraphQL is my server for storing data for use in my projects. It is
+hosted at [graphql.natwelch.com](https://graphql.natwelch.com/) and the
+code is at [github.com/icco/graphql](https://github.com/icco/graphql).
