--- a/wiki/projects/inspiration.mdx
+++ b/wiki/projects/inspiration.mdx
@@ -1,1 +1,7 @@
-# inspiration
+---
+title: Inspiration
+---
+
+# Inspiration
+
+[Inspiration](https://mood.natwelch.com/) is a somewhat defunct project to generate a dynamic mood board based off of my personal interests. It still works but most of the datasources are no longer generating fresh content.
