--- a/wiki/projects.mdx
+++ b/wiki/projects.mdx
@@ -4,56 +4,21 @@ title: Projects
 
 # Projects
 
-I post photos with varying consistency on
-[Flickr](https://www.flickr.com/photos/icco/) &
-[Instagram](https://www.instagram.com/probablynatwelch/). I try to be
-randomly clever on [Twitter](https://twitter.com/icco). I publish code
-on [Github](https://github.com/icco). Below are some of my favorite
-projects that I have or am working on. This list does not include any
-projects which are not open source. Please see my
-[resume](https://resume.natwelch.com/) for work projects I have been a
-part of.
+I post photos with varying consistency on [Flickr](https://www.flickr.com/photos/icco/) & [Instagram](https://www.instagram.com/probablynatwelch/). I try to be randomly clever on [Twitter](https://twitter.com/icco). I publish code on [Github](https://github.com/icco).
 
-## GraphQL
+Below are some of my favorite projects that I have or am working on. This list does not include any projects which are not open source.
 
-GraphQL is my server for storing data for use in my projects. It is
-hosted at [graphql.natwelch.com](https://graphql.natwelch.com/) and the
-code is at [github.com/icco/graphql](https://github.com/icco/graphql).
+Please see my [resume](https://resume.natwelch.com/) for work projects I have been a part of.
 
-## ReportD
+## Highlighted Projects
 
-ReportD is a service to send
-[report-to](https://developers.google.com/web/updates/2018/09/reportingapi)
-reports to. If you use
-[CSP](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy),
-[NEL](https://www.w3.org/TR/network-error-logging/),
-[HPKP](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Public-Key-Pins),
-[Expect-CT](https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Expect-CT)
-or other tools that support the [Web Reporting
-API](https://www.w3.org/TR/reporting/), you can use this as a target.
+ - [Fog](/wiki/projects/fog): A ruby library for interacting with cloud APIs.
+ - [GoTak](/wiki/projects/gotak): A Tak game server.
+ - [GraphQL](/wiki/projects/graphql): GraphQL is my server for storing data for use in my projects.
+ - [Inspiration](/wiki/projects/inspiration): A dynamic mood board.
+ - [ReportD](/wiki/projects/reportd): A server for the Web Report API.
+ - [Tab Archive](/wiki/projects/tabs): A browser extension for saving your open tabs.
 
-## Inspiration
+## All Wiki Project Pages
 
-[Inspiration](https://mood.natwelch.com/) is a somewhat defunct project
-to generate a dynamic mood board based off of my personal interests. It
-still works but most of the datasources are no longer generating fresh
-content.
-
-## Fog
-
-I am a core contributor to [Fog](http://fog.io/), a ruby library for
-talking to various cloud libraries in a consistent manor.
-
-## GoTak
-
-[GoTak](https://gotak.app/) is an application written in Go for playing
-[Tak](https://boardgamegeek.com/boardgame/197405/tak) online. It
-provides an api for games, moves, and a library for parsing
-[PTN](https://web.archive.org/web/20190508064910/https://www.reddit.com/r/Tak/wiki/portable_tak_notation).
-
-## Tab Archive
-
-[Tab Archive](https://tab-archive.app/) is a browser extension for
-closing and archiving your tabs.
-
-Nat Welch | Projects
+<WikiTree root="/projects" />
