--- a/wiki/projects/gotak.mdx
+++ b/wiki/projects/gotak.mdx
@@ -1,1 +1,7 @@
-# gotak
+---
+title: GoTak
+---
+
+# GoTak
+
+[GoTak](https://gotak.app/) is an application written in Go for playing [Tak](https://boardgamegeek.com/boardgame/197405/tak) online. It provides an api for games, moves, and a library for parsing [PTN](https://web.archive.org/web/20190508064910/https://www.reddit.com/r/Tak/wiki/portable_tak_notation).
