--- a/wiki/projects/tabs.mdx
+++ b/wiki/projects/tabs.mdx
@@ -1,1 +1,7 @@
-# tabs
+---
+title: Tab Archive
+---
+
+# Tab Archive
+
+[Tab Archive](https://tab-archive.app/) is a browser extension for closing and archiving your tabs. It broke with the latest versions of Chrome and Firefox. I at some point would like to return and fix it.
