Refactor and remove wikitree

--- a/wiki/projects.mdx
+++ b/wiki/projects.mdx
@@ -6,7 +6,7 @@ title: Projects
 
 I post photos with varying consistency on [Flickr](https://www.flickr.com/photos/icco/) & [Instagram](https://www.instagram.com/probablynatwelch/). I try to be randomly clever on [Twitter](https://twitter.com/icco). I publish code on [Github](https://github.com/icco).
 
-Below are some of my favorite projects that I have or am working on. This list does not include any projects which are not open source.
+Below are some of my favorite projects that I have or am working on. This list does not include any projects which are not open source. See the [wiki root](/wiki) for a list of all projects in the wiki.
 
 Please see my [resume](https://resume.natwelch.com/) for work projects I have been a part of.
 
@@ -18,7 +18,3 @@ Please see my [resume](https://resume.natwelch.com/) for work projects I have be
  - [Inspiration](/wiki/projects/inspiration): A dynamic mood board.
  - [ReportD](/wiki/projects/reportd): A server for the Web Report API.
  - [Tab Archive](/wiki/projects/tabs): A browser extension for saving your open tabs.
-
-## All Wiki Project Pages
-
-<WikiTree root="/projects" />
