lots of project pages

--- a/wiki/projects/books.mdx
+++ b/wiki/projects/books.mdx
@@ -3,3 +3,12 @@ title: Books
 ---
 
 # Books
+
+I have written two books:
+
+ - [Real-World SRE](/wiki/projects/books/realwordsre)
+ - [Reliable Web Servers in Go](/wiki/projects/books/reliableweb)
+
+ And I have one in progress
+
+  - [locative.garden](/wiki/projects/books/locative.garden)
