--- a/wiki/projects/charts.mdx
+++ b/wiki/projects/charts.mdx
@@ -1,1 +1,7 @@
-# charts
+---
+title: Chartopia
+---
+
+# Chartopia
+
+[charts](https://github.com/icco/charts) aka Chartopia is an abandoned project for recreating the original Google Charts API.
