--- a/wiki/projects/code.mdx
+++ b/wiki/projects/code.mdx
@@ -1,1 +1,7 @@
-# code
+---
+title: code.natwelch.com
+---
+
+# code.natwelch.com
+
+[code](https://github.com/icco/code.natwelch.com) is my scraper for github to track my commits to Git over time.
