--- a/wiki/projects/books/locative.garden.mdx
+++ b/wiki/projects/books/locative.garden.mdx
@@ -3,3 +3,5 @@ title: locative.garden
 ---
 
 # locative.garden
+
+A fiction short-story collection currently in-progress. You can follow by [subscribing on Kickstarter](https://kck.st/3Ft2AHf) or watching [icco/locative.garden](https://github.com/icco/locative.garden).
