--- a/wiki/projects/books/realworldsre.mdx
+++ b/wiki/projects/books/realworldsre.mdx
@@ -1,1 +1,7 @@
-# Real World SRE
+---
+title: Real-World SRE
+---
+
+# Real-World SRE
+
+A book I wrote for Packt. See more at https://realworldsre.com.
