--- a/wiki/projects/books/reliableweb.mdx
+++ b/wiki/projects/books/reliableweb.mdx
@@ -1,7 +1,7 @@
 ---
-title: Relable Web Servers with Go
+title: Reliable Web Servers with Go
 ---
 
-# Relable Web Servers with Go
+# Reliable Web Servers with Go
 
 
