--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -48,10 +48,10 @@ friends traveling.
 
 ## Speaker Bio
 
-Nat Welch is an Site Reliability Engineer based in Brooklyn, NY, and the
-author of "Real World SRE" from Packt Publishing. He has been
-professionally building and running software on the internet since 2005,
-and loves making tools and promoting conversation online. He currently
-works for Google on the Customer Reliability Engineering team. In the
-past, he has worked for First Look Media, Hillary for America, iFixit,
-and others.
+Nat Welch is an Site Reliability Engineer based in Beacon, NY, and the author
+of two books: "Real World SRE" from Packt Publishing and "Reliable Webservers
+with Go" from Newline. He has been professionally building and running software
+on the internet since 2005, and loves making tools and promoting conversation
+online. He currently works for Time By Ping as the Lead and Manager of the
+Cloud Platform team. In the past, he has worked for Punchd, First Look Media,
+Hillary for America, iFixit, Google, and others.
