--- a/wiki/projects/books/reliableweb.mdx
+++ b/wiki/projects/books/reliableweb.mdx
@@ -4,4 +4,4 @@ title: Reliable Web Servers with Go
 
 # Reliable Web Servers with Go
 
-
+I wrote this book with [Steve McCarthy](http://redlua.com/). You can purchase it on https://reliableweb.dev
