--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -8,7 +8,7 @@ title: About
 
 Hi there! I am Nat. I was born in the San Francisco Bay Area, <Age />. I currently live in Beacon, NY with my wife Melissa and our cat Beasley. During the day I work as the Lead Cloud Platform Engineer for [Time by Ping](https://timebyping.com/).
 
-You can see [my resume](https://resume.natwelch.com/) for my indepth
+You can see [my resume](https://resume.natwelch.com/) for my in-depth
 work history.
 
 See my [Privacy Policy](https://natwelch.com/privacy) for what data I
@@ -27,7 +27,7 @@ I have some core beliefs that are the basis for most things that I do.
 
 >   Humans are inherently good and hilarious, and communicating with them well is important.
 
-You can read a more indepth writeup of these beliefs on my blog: [Nat Welch Manifesto](https://writing.natwelch.com/post/703)
+You can read a more in-depth writeup of these beliefs on my blog: [Nat Welch Manifesto](https://writing.natwelch.com/post/703)
 
 ## Social
 
@@ -39,7 +39,7 @@ I have lived in San Francisco, London, New York and a few other places.
 When I move, I try to create a blog post of my favorite places in a city
 right before I leave. I then do not update them. As such, they are very
 out of date. That being said, I enjoy looking at them and sharing with
-friends traveling.
+friends who are traveling.
 
 -   [London](https://writing.natwelch.com/post/526)
 -   [SF](https://writing.natwelch.com/post/522)
@@ -53,5 +53,4 @@ of two books: "Real World SRE" from Packt and "Reliable Webservers with Go"
 from Newline. He has been professionally building and running software on the
 internet since 2005, and loves making tools and promoting conversation online.
 He currently works for Time By Ping as the Lead and Manager of the Cloud
-Platform team. In the past, he has worked for Punchd, First Look Media, Hillary
-for America, iFixit, Google, and others.
+Platform team. In the past, he has worked for Punchd, First Look Media, Hillary for America, iFixit, Google, and others.
