--- a/wiki/mentoring.mdx
+++ b/wiki/mentoring.mdx
@@ -6,7 +6,7 @@ title: Mentoring
 
 ## What
 
-I would like to be your colleague, friend and/or acquaintance. Why?  Because, my career has been particularly weird, and talking to others has helped me be somewhat successful in surviving some transitions. I have jumped to and from startups, big business, politics, writing, and many other situations. I failed out of college briefly, and have lived in ~five cities. If you think this experience would be useful to you, I would love to chat.
+I would like to be your colleague, friend and/or acquaintance. Why?  Because, my career has been weird, and talking to others has helped me be somewhat successful in surviving some transitions. I have jumped to and from startups, big business, politics, writing, and many other situations. I failed out of college briefly, and have lived in ~five cities. If you think this experience would be useful to you, I would love to chat.
 
 ## How To
 
@@ -14,4 +14,4 @@ There are a few options to get in touch!
 
 - You can book time to chat on [Calendly](https://calendly.com/icco/chat-with-nat).
 - You can email me nat@natwelch.com.
-- You can also use the mentoring service [ADPList](https://adplist.org/mentors/nat-welch).
+- You can use the mentoring service [ADPList](https://adplist.org/mentors/nat-welch).
