--- a/wiki/writing.mdx
+++ b/wiki/writing.mdx
@@ -20,3 +20,4 @@ I love writing and talking about writing. If you have a topic you would like me 
 It is rare that someone writes about me, but it has happened.
 
 -   [Time Review: Nat Welch](https://medium.com/time-review/hello-nat-welch-lead-cloud-platform-engineer-at-time-by-ping-49e6107758f5)
+- [geeks+gurus: Reducing the SRE burden for improved mental health](https://www.linkedin.com/posts/natwelch_geeksgurus-reducing-the-sre-burden-for-activity-7006633793675485186-SDgN?utm_source=share&utm_medium=member_desktop)
