--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -6,7 +6,7 @@ title: About
 
 ## Nat Welch
 
-Hi there! I am Nat. I was born in the San Francisco Bay Area, <Age />. I currently live in Beacon, NY with my wife Melissa and our cat Beasley. During the day I work as the Lead Cloud Platform Engineer for [Time by Ping](https://timebyping.com/).
+Hi there! I am Nat. I was born in the San Francisco Bay Area, <Age />. I currently live in Beacon, NY with my wife Melissa and our cat Beasley. During the day I work as the Lead Cloud Platform Engineer for [Laurel](https://laurel.ai/).
 
 You can see [my resume](https://resume.natwelch.com/) for my in-depth
 work history.
