--- a/wiki/about.mdx
+++ b/wiki/about.mdx
@@ -1,16 +1,16 @@
 ---
+
 title: About
+
 ---
 
 ## Nat Welch
 
 Hi there! I am Nat. I was born in the San Francisco Bay Area, <Age />. I currently live in Beacon, NY with my wife Melissa and our cat Beasley. During the day I work as the Lead Cloud Platform Engineer for [Laurel](https://laurel.ai/).
 
-You can see [my resume](https://resume.natwelch.com/) for my in-depth
-work history.
+You can see [my resume](https://resume.natwelch.com/) for my in-depth work history.
 
-See my [Privacy Policy](https://natwelch.com/privacy) for what data I
-keep when you visit this site and others I maintain.
+See my [Privacy Policy](https://natwelch.com/wiki/privacy-policy) for what data I keep when you visit this site and others I maintain.
 
 See [Projects](https://natwelch.com/wiki/projects) for a list of my current
 side projects.
